--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ services:
 install:
   - pip install -r requirements.txt
 script:
-  - python -m unittest -v test_serve
+  - python -m unittest -v test_server
