--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,11 @@ install:
   - pip install -r requirements.txt
 script:
   - python -m unittest -v test_server_paste
+  - docker docker build -t key_storage_server . 
+before_deploy:
+  - docker login -u vadimik -p "$REGISTRY_PASS"
+deploy:
+  provider: script
+  script: docker push vadimik/key_storage_server:1
+  on:
+    branch: master
