--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install -r requirements.txt
 script:
   - python -m unittest -v test_server_paste
-  - docker docker build -t key_storage_server . 
+  - docker build -t key_storage_server . 
 before_deploy:
   - docker login -u vadimik -p "$REGISTRY_PASS"
 deploy:
